Curve pen creates duplicate control points #98624

Closed
opened 2022-06-06 09:02:28 +02:00 by Pratik Borhade · 8 comments
Member

Broken version: 3.3

Short description of error
Curve pen tool creates duplicate control points

Exact steps for others to reproduce the error

  • Open default scene
  • Enable curve extra object addon
  • add single point curve
  • from redo panel -> change type to 3D and Bezier to Nurbs
  • Draw points to create the curve
  • Change order U to 4
  • switch to select tool from toolbar
  • Click on any control point and move it (notice duplicates has been created)
Broken version: 3.3 **Short description of error** Curve pen tool creates duplicate control points **Exact steps for others to reproduce the error** - Open default scene - Enable curve extra object addon - add single point curve - from redo panel -> change type to 3D and Bezier to Nurbs - Draw points to create the curve - Change order U to 4 - switch to select tool from toolbar - Click on any control point and move it (notice duplicates has been created)
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @dilithjay

Added subscriber: @dilithjay
Author
Member
cc @dilithjay

Thanks, @PratikPB2123. I'm able to reproduce. Will take a look.

Thanks, @PratikPB2123. I'm able to reproduce. Will take a look.

This issue was referenced by 6b82a2fce2

This issue was referenced by 6b82a2fce2dd0810d06d039ed3c9acfdd079746c

This issue was referenced by 520be607e8

This issue was referenced by 520be607e8baf4dacfadc1897013c84e77b81b27

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dilith Jayakody self-assigned this 2022-06-08 15:08:21 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98624
No description provided.